# Graduation-Project-smart

./: Dockerfile  app.py  app2.py  app_streamlit.py  assistant_data.db  enhanced_label_encoder.pkl  enhanced_tokenizer.pkl  main.py  pyproject.toml  requirements.txt  self_attention.py  setup.sh  train.ipynb
.streamlit/: config.toml
chatbooot/: main.py
chatbooot/engine/: command.py  features.py
chatbooot/www/: controller.js  index.html  main.js  style.css
voiceASS - Copy/: app_streamlit.py  assistant_data.db  intents.json  main.py  model_test.py  model_train.py  tokenizer.pkl
