[project]
name = "graduation-project-smart"  # غير الاسم ده لاسم المشروع بتاعك
version = "0.1.0"  # ممكن تسيبها زي ما هي
description = "My Streamlit app"  # ممكن تعدل الـdescription دي
dependencies = [
  "streamlit",
  "tensorflow",
  "numpy",
]
[tool.poetry]
name = "your-project"
version = "0.1.0"
description = ""
authors = []
python = "3.12.3"  # Correct placement
